fix size of section titles on mobile

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -16,6 +16,10 @@ h4 {
     line-height: 1.2;
     margin-bottom: 1.5rem;
     color: v.$color-primario; // Usando el color turquesa del logo
+
+    @media (max-width: v.$bp-mobile) {
+        font-size: 2rem;
+    }
 }
 
 p {
