--- a/src/css/main.css
+++ b/src/css/main.css
@@ -52,6 +52,14 @@ h4 {
   margin-bottom: 1.5rem;
   color: #008894;
 }
+@media (max-width: 480px) {
+  h1,
+  h2,
+  h3,
+  h4 {
+    font-size: 2rem;
+  }
+}
 
 p {
   margin-bottom: 0;
@@ -2943,4 +2951,6 @@ main {
   .timeline-dot {
     display: none;
   }
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*# sourceMappingURL=main.css.map */
